Simplify code and close streams properly.